# FileScanner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  startGUI.bat
gui/: scanner_ui.py
src/: FileScanner.cpp  FileScanner.h  FileScannerImpl.cpp  FileScannerImpl.h
test/: test_main.cpp
